apps/camera/style/controls-dual.css
/**
 * Controls
 *
 * The main camera control bar.
 */

.controls-dual {
  display: flex;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  padding-bottom: 1rem;
  overflow: hidden;
  background: linear-gradient(
  to bottom,
  rgba(0,0,0,0) 0%,
  rgba(0,0,0,0.15) 100%);
}

/**
 * enabled=false
 */

.controls-dual[enabled=false] {
  pointer-events: none;
}

/** Left and Right
 ---------------------------------------------------------*/

.controls-dual-left,
.controls-dual-right {
  display: flex;
  flex: 1;
  align-items: center;
  -moz-user-select: none;
}

/** Left
 ---------------------------------------------------------*/

.controls-dual-left {
  justify-content: flex-end;
  opacity: 1;
  pointer-events: auto;
  transition: opacity 200ms ease-in-out;
}

/**
 * recording=true
 */

.controls-dual[recording=true] .controls-dual-left {
  opacity: 0;
  pointer-events: none;
}

/** Right
 ---------------------------------------------------------*/

.controls-dual-right {
  justify-content: flex-start;
}

/** Controls Button
 ---------------------------------------------------------*/
.controls-button {
  position: relative;
  box-sizing: content-box;
  display: block;
  height: 5.4rem;
  width: 5.4rem;
  font-size: 3rem;
  line-height: 5.4rem;
  text-align: center;
  border-radius: 50%;
  background-position: center center;
  background-repeat: no-repeat;
  background-color: rgba(0,0,0,0.4);
  background-clip: padding-box;
  border: solid 1.8rem transparent;
  -moz-box-sizing: content-box;
  color: #fff;
}

/**
 * :active
 */

.controls-button:active {
  background-color: #00b9df;
}

/**
 * gallery=false
 */

.controls-dual[gallery=false] .controls-gallery-button{
  display: none;
}

/** Thumbnail Button
 ---------------------------------------------------------*/

.controls-thumbnail-button {
  display: none;
}

.controls-dual[thumbnail=true] .controls-thumbnail-button {
  display: block;
}

.controls-thumbnail-button > img {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border: solid 2px #ffffff;
  border-radius: 50%;
  animation: thumbnail-fade-in 300ms;
}

/** Thumbnail Animation
 ---------------------------------------------------------*/

@keyframes thumbnail-fade-in {
  0% { opacity: 0; }
  100% { opacity: 1; }
}

/** Cancel Pick Button
 ---------------------------------------------------------*/

.controls-cancel-pick-button {
  display: none;
  font-size: 4rem;
  line-height: 4rem;
}

/**
 * @cancel
 */

.controls-dual[cancel=true] .controls-cancel-pick-button {
  display: block;
}


/** Video Record Button
 ---------------------------------------------------------*/

.video-record-dual {
  position:relative;
  width: 5rem;
  height: 5rem;
  margin-left: 1.8rem;
  -moz-user-select: none;
}

/** Video Outer Circle
 ---------------------------------------------------------*/

.video-record-dual .outer-circle {
  background-color: #FFFFFF;
  opacity: 1;
  transform: scale(1);
  transition: transform 100ms ease-in;
}

.video-record-dual:active .outer-circle {
  background-color: #D92E2E;
  opacity: 1;
  transform: scale(1.5);
  transition: transform 100ms ease-in;
}

.controls-dual[mode=video] .video-record-dual .outer-circle {
  background-color: #D92E2E;
  opacity: 1;
  transform: scale(1.5);
  transition: transform 100ms ease-in;
}

/** Video Recording Dot
 ---------------------------------------------------------*/

.video-record-dual .dot {
  position: absolute;
  top: 50%;
  left: 50%;
  margin-top: -0.8rem;
  margin-left: -0.8rem;
  border-radius: 50%;
  width: 1.6rem;
  height: 1.6rem;
  background: #D92E2E;
  opacity: 1;
}

.video-record-dual:active .dot {
  border-radius: 15%;
  background-color: #FFFFFF;
  transform: scale(1);
  transition: transform 100ms ease-in;
}

.controls-dual[mode=video] .video-record-dual .dot {
  border-radius: 15%;
  background-color: #FFFFFF;
  transform: scale(1.4);
  transition: transform 100ms ease-in;
}

.video-record-dual[disabled] {
  pointer-events: none;
}

/** Capture Button
 ---------------------------------------------------------*/

.capture-button-dual {
  position: relative;
  top: calc(50% - 5.1rem);
  width: 10.2rem;
  height: 10.2rem;
  -moz-user-select: none;
}

/** Circle
 ---------------------------------------------------------*/

.capture-button-dual .circle,
.video-record-dual .circle {
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 50%;
}

/** Outer Circle
 ---------------------------------------------------------*/

.outer-circle {
  background: #C3F5FF;
  opacity: 0.35;
}

/** Inner Circle
 ---------------------------------------------------------*/

.capture-button-dual .inner-circle {
  background-color: white;
  transform: scale(0.76);
  transition: transform 100ms ease-in;
}

/**
 * :active
 */

.capture-button-dual:active .inner-circle {
  background-color: #00caf2;
  color: white;
  transform: scale(1.0);
}

/** Icon
 ---------------------------------------------------------*/

.capture-button-dual .center:after {
  display: block;
  position: absolute;
  width: 100%;
  height: 100%;
  font-size: 4rem;
  line-height: 10.2rem;
  text-align: center;
  color: #81ACB6;
  content: "\e60f";
  transition: none;
}

/**
 * :active
 */

.capture-button-dual:active .center:after{
  color: white;
}

